# qmatplotwidget

./: .gitignore  CMakeLists.txt  LICENSE  README.md  qmatplotwidget.pro
.github/workflows/: windows.yml
cmake/: QMatPlotWidgetConfig.cmake.in
examples/: examples.pro
examples/realtimeplot/: CMakeLists.txt  realtimeplot.pro  widget.cpp  widget.h
examples/simpleplot/: CMakeLists.txt  main.cpp  simpleplot.pro
src/: CMakeLists.txt  DataAdaptors.h  QMatPlotWidget  QMatPlotWidget.cpp  QMatPlotWidget.h  colormap.cpp  qmatplotwidget.cpp  qmatplotwidget.h  qmatplotwidget.pri  qmatplotwidget_p.h  qwtbackend.cpp  qwtbackend.h
